# drf-cas-jwt

./: .env.sample  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: SETTINGS_EXAMPLES.py
drf_cas_jwt/: admin.py  alerts.py  apps.py  authentication.py  models.py  refresh_utils.py  settings.py  tests.py  views.py
drf_cas_jwt/migrations/: 0001_initial.py  0002_remove_device_and_update_token.py  0003_add_refresh_token_family_and_audit_log.py  0004_add_security_alert_recipient.py
