[metadata]
name = drf-cas-jwt
version = 0.1.1
url=https://github.com/caiofaria2308/drf-cas-jwt
description = A Django app to use JWT with CAS and Django Rest Framework.
long_description = file: README.rst
author = Caio de Faria
author_email = caiofaria2308@gmail.com
license = BSD-3-Clause  # Example license
install_requires=[
        "Django>=2.0",
        "setuptools>=65.5.1",
        "django-cas-ng>=4.1.1",
        "djangorestframework-simplejwt>=4.6.0",
        "django-user-agents>=0.4.0",
        "pyyaml>=5.4.1",
        "ua-parser>=0.18.0",
        "user-agents>=2.2.0",
    ],
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
